redirect 주소 변경(롯데칠성몰)

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,16 @@
 .App {
-  text-align: center;
+  display: flex;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+  font-size: 2rem;
 }
+
+/* .content {
+  display: flex;
+  text-align: center;
+  align-items: center;
+} */
 
 .App-logo {
   height: 40vmin;
