--- a/src/App.css
+++ b/src/App.css
@@ -6,11 +6,15 @@
   font-size: 2rem;
 }
 
-/* .content {
-  display: flex;
-  text-align: center;
-  align-items: center;
-} */
+.container {
+  width: 100vw;
+  height: 100vh;
+}
+
+img {
+  width: 100%;
+  object-fit: scale-down;
+}
 
 .App-logo {
   height: 40vmin;
